--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Jul 14 09:05:03 2018</p>
+         Last Run: Sat Jul 14 10:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. WHU Monaco - Rundle College</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jul 14, 2018 - 11:30AM til  2:00PM</H4>
                <table class="table table-striped">
@@ -29,52 +29,40 @@
                   </thead>
                   <tbody>
                      <tr>
-                        <td>10:00 AM</td>
-                        <td>Partly Cloudy</td>
-                        <td>11</td>
-                        <td>11</td>
-                        <td>0</td>
-                        <td>64</td>
-                        <td>3</td>
-                        <td>14</td>
-                        <td>NNW</td>
-                        <td>37</td>
-                     </tr>
-                     <tr>
                         <td>11:00 AM</td>
                         <td>Clear</td>
-                        <td>13</td>
-                        <td>13</td>
+                        <td>14</td>
+                        <td>14</td>
                         <td>0</td>
-                        <td>52</td>
+                        <td>51</td>
                         <td>5</td>
-                        <td>13</td>
+                        <td>11</td>
                         <td>NNW</td>
-                        <td>23</td>
+                        <td>10</td>
                      </tr>
                      <tr>
                         <td>12:00 PM</td>
                         <td>Clear</td>
-                        <td>15</td>
-                        <td>15</td>
+                        <td>16</td>
+                        <td>16</td>
                         <td>0</td>
                         <td>43</td>
                         <td>6</td>
                         <td>11</td>
                         <td>NNW</td>
-                        <td>16</td>
+                        <td>5</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
                         <td>Clear</td>
-                        <td>18</td>
-                        <td>18</td>
+                        <td>17</td>
+                        <td>17</td>
                         <td>0</td>
-                        <td>37</td>
+                        <td>38</td>
                         <td>7</td>
-                        <td>10</td>
+                        <td>8</td>
                         <td>NNW</td>
-                        <td>6</td>
+                        <td>0</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
@@ -86,7 +74,7 @@
                         <td>7</td>
                         <td>10</td>
                         <td>NNW</td>
-                        <td>21</td>
+                        <td>20</td>
                      </tr>
                   </tbody>
                </table>
@@ -119,7 +107,6 @@
                   var ctx = document.getElementById("chartHTMLReportGenerator1").getContext("2d");
                   var data ={
            "labels":[
-             "10:00 AM",
              "11:00 AM",
              "12:00 PM",
              "01:00 PM",
@@ -132,10 +119,9 @@
                "pointColor":"rgba(92,0,141,1)",
                "fillColor":"rgba(92,0,141,0)",
                "data":[
-                 "11",
-                 "13",
-                 "15",
-                 "18",
+                 "14",
+                 "16",
+                 "17",
                  "19"
                ]
              },
@@ -145,10 +131,9 @@
                "pointColor":"rgba(252,49,18,1)",
                "fillColor":"rgba(252,49,18,0)",
                "data":[
-                 "11",
-                 "13",
-                 "15",
-                 "18",
+                 "14",
+                 "16",
+                 "17",
                  "19"
                ]
              }
@@ -190,7 +175,6 @@
                   var ctx = document.getElementById("chartHTMLReportGenerator2").getContext("2d");
                   var data ={
            "labels":[
-             "10:00 AM",
              "11:00 AM",
              "12:00 PM",
              "01:00 PM",
@@ -205,7 +189,6 @@
                  "0",
                  "0",
                  "0",
-                 "0",
                  "0"
                ]
              },
@@ -214,10 +197,9 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "64",
-                 "52",
+                 "51",
                  "43",
-                 "37",
+                 "38",
                  "34"
                ]
              },
@@ -226,11 +208,10 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "37",
-                 "23",
-                 "16",
-                 "6",
-                 "21"
+                 "10",
+                 "5",
+                 "0",
+                 "20"
                ]
              }
            ]
@@ -248,7 +229,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Jul 14 09:05:03 2018</p>
+         Last Run: Sat Jul 14 10:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">World Cup Final Game - Coach Tyler's House - Coach Tyler's</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Jul 15, 2018 -  9:00AM til  1:00PM</H4>
                <table class="table table-striped">
@@ -273,7 +254,7 @@
                         <td>16</td>
                         <td>16</td>
                         <td>0</td>
-                        <td>50</td>
+                        <td>49</td>
                         <td>2</td>
                         <td>6</td>
                         <td>SSW</td>
@@ -285,10 +266,10 @@
                         <td>18</td>
                         <td>18</td>
                         <td>0</td>
-                        <td>43</td>
+                        <td>41</td>
                         <td>3</td>
                         <td>8</td>
-                        <td>S</td>
+                        <td>SSW</td>
                         <td>7</td>
                      </tr>
                      <tr>
@@ -297,10 +278,10 @@
                         <td>20</td>
                         <td>20</td>
                         <td>0</td>
-                        <td>39</td>
+                        <td>36</td>
                         <td>4</td>
                         <td>8</td>
-                        <td>SSE</td>
+                        <td>SE</td>
                         <td>6</td>
                      </tr>
                      <tr>
@@ -309,11 +290,11 @@
                         <td>22</td>
                         <td>22</td>
                         <td>0</td>
-                        <td>34</td>
+                        <td>31</td>
                         <td>6</td>
                         <td>8</td>
-                        <td>SSE</td>
-                        <td>6</td>
+                        <td>SE</td>
+                        <td>5</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
@@ -321,11 +302,11 @@
                         <td>23</td>
                         <td>23</td>
                         <td>0</td>
-                        <td>30</td>
+                        <td>28</td>
                         <td>7</td>
-                        <td>8</td>
-                        <td>SE</td>
-                        <td>5</td>
+                        <td>6</td>
+                        <td>ESE</td>
+                        <td>6</td>
                      </tr>
                   </tbody>
                </table>
@@ -453,11 +434,11 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "50",
-                 "43",
-                 "39",
-                 "34",
-                 "30"
+                 "49",
+                 "41",
+                 "36",
+                 "31",
+                 "28"
                ]
              },
              {
@@ -468,8 +449,8 @@
                  "7",
                  "7",
                  "6",
-                 "6",
-                 "5"
+                 "5",
+                 "6"
                ]
              }
            ]
@@ -486,7 +467,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Jul 14 09:05:03 2018</p>
+         Last Run: Sat Jul 14 10:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Conditioning/Sport Psych - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Jul 16, 2018 -  6:30PM til  7:30PM</H4>
                <table class="table table-striped">
@@ -511,7 +492,7 @@
                         <td>29</td>
                         <td>29</td>
                         <td>0</td>
-                        <td>22</td>
+                        <td>21</td>
                         <td>2</td>
                         <td>11</td>
                         <td>SE</td>
@@ -523,7 +504,7 @@
                         <td>28</td>
                         <td>28</td>
                         <td>0</td>
-                        <td>25</td>
+                        <td>24</td>
                         <td>1</td>
                         <td>13</td>
                         <td>SE</td>
@@ -532,10 +513,10 @@
                      <tr>
                         <td>08:00 PM</td>
                         <td>Clear</td>
-                        <td>26</td>
-                        <td>26</td>
+                        <td>27</td>
+                        <td>27</td>
                         <td>0</td>
-                        <td>30</td>
+                        <td>28</td>
                         <td>0</td>
                         <td>13</td>
                         <td>ESE</td>
@@ -585,7 +566,7 @@
                "data":[
                  "29",
                  "28",
-                 "26"
+                 "27"
                ]
              },
              {
@@ -596,7 +577,7 @@
                "data":[
                  "29",
                  "28",
-                 "26"
+                 "27"
                ]
              }
            ]
@@ -657,9 +638,9 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "22",
-                 "25",
-                 "30"
+                 "21",
+                 "24",
+                 "28"
                ]
              },
              {
@@ -686,7 +667,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Jul 14 09:05:04 2018</p>
+         Last Run: Sat Jul 14 10:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - Andrew Sibbald School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 17, 2018 -  7:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -708,8 +689,8 @@
                      <tr>
                         <td>07:00 PM</td>
                         <td>Clear</td>
-                        <td>29</td>
-                        <td>29</td>
+                        <td>28</td>
+                        <td>28</td>
                         <td>0</td>
                         <td>27</td>
                         <td>1</td>
@@ -725,9 +706,9 @@
                         <td>0</td>
                         <td>34</td>
                         <td>0</td>
-                        <td>13</td>
+                        <td>11</td>
                         <td>E</td>
-                        <td>21</td>
+                        <td>20</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
@@ -783,7 +764,7 @@
                "pointColor":"rgba(92,0,141,1)",
                "fillColor":"rgba(92,0,141,0)",
                "data":[
-                 "29",
+                 "28",
                  "27",
                  "24"
                ]
@@ -794,7 +775,7 @@
                "pointColor":"rgba(252,49,18,1)",
                "fillColor":"rgba(252,49,18,0)",
                "data":[
-                 "29",
+                 "28",
                  "27",
                  "24"
                ]
@@ -868,7 +849,7 @@
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
                  "22",
-                 "21",
+                 "20",
                  "20"
                ]
              }
@@ -886,7 +867,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Jul 14 09:05:04 2018</p>
+         Last Run: Sat Jul 14 10:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - Douglas Glen Blvd SE</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Thursday Jul 19, 2018 -  6:30PM til  8:00PM</H4>
                <table class="table table-striped">
