--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Jul 14 11:05:04 2018</p>
+         Last Run: Sat Jul 14 12:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. WHU Monaco - Rundle College</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jul 14, 2018 - 11:30AM til  2:00PM</H4>
                <table class="table table-striped">
@@ -29,28 +29,16 @@
                   </thead>
                   <tbody>
                      <tr>
-                        <td>12:00 PM</td>
-                        <td>Clear</td>
-                        <td>16</td>
-                        <td>16</td>
-                        <td>0</td>
-                        <td>43</td>
-                        <td>6</td>
-                        <td>13</td>
-                        <td>NNW</td>
-                        <td>13</td>
-                     </tr>
-                     <tr>
                         <td>01:00 PM</td>
                         <td>Clear</td>
                         <td>17</td>
                         <td>17</td>
                         <td>0</td>
-                        <td>38</td>
+                        <td>39</td>
                         <td>7</td>
-                        <td>11</td>
+                        <td>13</td>
                         <td>NNW</td>
-                        <td>5</td>
+                        <td>6</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
@@ -58,11 +46,11 @@
                         <td>19</td>
                         <td>19</td>
                         <td>0</td>
-                        <td>35</td>
+                        <td>36</td>
                         <td>7</td>
                         <td>11</td>
                         <td>NNW</td>
-                        <td>20</td>
+                        <td>21</td>
                      </tr>
                   </tbody>
                </table>
@@ -95,7 +83,6 @@
                   var ctx = document.getElementById("chartHTMLReportGenerator1").getContext("2d");
                   var data ={
            "labels":[
-             "12:00 PM",
              "01:00 PM",
              "02:00 PM"
            ],
@@ -106,7 +93,6 @@
                "pointColor":"rgba(92,0,141,1)",
                "fillColor":"rgba(92,0,141,0)",
                "data":[
-                 "16",
                  "17",
                  "19"
                ]
@@ -117,7 +103,6 @@
                "pointColor":"rgba(252,49,18,1)",
                "fillColor":"rgba(252,49,18,0)",
                "data":[
-                 "16",
                  "17",
                  "19"
                ]
@@ -160,7 +145,6 @@
                   var ctx = document.getElementById("chartHTMLReportGenerator2").getContext("2d");
                   var data ={
            "labels":[
-             "12:00 PM",
              "01:00 PM",
              "02:00 PM"
            ],
@@ -171,7 +155,6 @@
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
                  "0",
-                 "0",
                  "0"
                ]
              },
@@ -180,9 +163,8 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "43",
-                 "38",
-                 "35"
+                 "39",
+                 "36"
                ]
              },
              {
@@ -190,9 +172,8 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "13",
-                 "5",
-                 "20"
+                 "6",
+                 "21"
                ]
              }
            ]
@@ -210,7 +191,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Jul 14 11:05:04 2018</p>
+         Last Run: Sat Jul 14 12:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">World Cup Final Game - Coach Tyler's House - Coach Tyler's</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Jul 15, 2018 -  9:00AM til  1:00PM</H4>
                <table class="table table-striped">
@@ -249,7 +230,7 @@
                         <td>0</td>
                         <td>41</td>
                         <td>3</td>
-                        <td>8</td>
+                        <td>6</td>
                         <td>SSW</td>
                         <td>7</td>
                      </tr>
@@ -262,7 +243,7 @@
                         <td>36</td>
                         <td>4</td>
                         <td>8</td>
-                        <td>SE</td>
+                        <td>SSE</td>
                         <td>7</td>
                      </tr>
                      <tr>
@@ -271,7 +252,7 @@
                         <td>22</td>
                         <td>22</td>
                         <td>0</td>
-                        <td>32</td>
+                        <td>31</td>
                         <td>6</td>
                         <td>8</td>
                         <td>SE</td>
@@ -286,8 +267,8 @@
                         <td>28</td>
                         <td>7</td>
                         <td>8</td>
-                        <td>SE</td>
-                        <td>6</td>
+                        <td>ESE</td>
+                        <td>10</td>
                      </tr>
                   </tbody>
                </table>
@@ -418,7 +399,7 @@
                  "49",
                  "41",
                  "36",
-                 "32",
+                 "31",
                  "28"
                ]
              },
@@ -431,7 +412,7 @@
                  "7",
                  "7",
                  "6",
-                 "6"
+                 "10"
                ]
              }
            ]
@@ -448,7 +429,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Jul 14 11:05:04 2018</p>
+         Last Run: Sat Jul 14 12:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Conditioning/Sport Psych - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Jul 16, 2018 -  6:30PM til  7:30PM</H4>
                <table class="table table-striped">
@@ -648,7 +629,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Jul 14 11:05:04 2018</p>
+         Last Run: Sat Jul 14 12:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - Andrew Sibbald School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 17, 2018 -  7:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -848,7 +829,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Jul 14 11:05:04 2018</p>
+         Last Run: Sat Jul 14 12:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - Douglas Glen Blvd SE</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Thursday Jul 19, 2018 -  6:30PM til  8:00PM</H4>
                <table class="table table-striped">
@@ -870,34 +851,34 @@
                      <tr>
                         <td>06:00 PM</td>
                         <td>Clear</td>
-                        <td>25</td>
-                        <td>25</td>
-                        <td>10</td>
-                        <td>36</td>
+                        <td>26</td>
+                        <td>26</td>
+                        <td>8</td>
+                        <td>33</td>
                         <td>2</td>
                         <td>14</td>
-                        <td>NE</td>
-                        <td>8</td>
+                        <td>ENE</td>
+                        <td>7</td>
                      </tr>
                      <tr>
                         <td>07:00 PM</td>
                         <td>Clear</td>
-                        <td>24</td>
-                        <td>24</td>
-                        <td>12</td>
-                        <td>39</td>
+                        <td>25</td>
+                        <td>25</td>
+                        <td>9</td>
+                        <td>36</td>
                         <td>1</td>
                         <td>16</td>
-                        <td>NNE</td>
-                        <td>8</td>
+                        <td>NE</td>
+                        <td>7</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
                         <td>Clear</td>
-                        <td>22</td>
-                        <td>22</td>
-                        <td>14</td>
-                        <td>45</td>
+                        <td>23</td>
+                        <td>23</td>
+                        <td>11</td>
+                        <td>43</td>
                         <td>0</td>
                         <td>16</td>
                         <td>NNE</td>
@@ -945,9 +926,9 @@
                "pointColor":"rgba(92,0,141,1)",
                "fillColor":"rgba(92,0,141,0)",
                "data":[
+                 "26",
                  "25",
-                 "24",
-                 "22"
+                 "23"
                ]
              },
              {
@@ -956,9 +937,9 @@
                "pointColor":"rgba(252,49,18,1)",
                "fillColor":"rgba(252,49,18,0)",
                "data":[
+                 "26",
                  "25",
-                 "24",
-                 "22"
+                 "23"
                ]
              }
            ]
@@ -1009,9 +990,9 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "10",
-                 "12",
-                 "14"
+                 "8",
+                 "9",
+                 "11"
                ]
              },
              {
@@ -1019,9 +1000,9 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
+                 "33",
                  "36",
-                 "39",
-                 "45"
+                 "43"
                ]
              },
              {
@@ -1029,8 +1010,8 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "8",
-                 "8",
+                 "7",
+                 "7",
                  "8"
                ]
              }
