--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Jul 14 14:05:03 2018</p>
+         Last Run: Sat Jul 14 15:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">World Cup Final Game - Coach Tyler's House - Coach Tyler's</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Jul 15, 2018 -  9:00AM til  1:00PM</H4>
                <table class="table table-striped">
@@ -36,7 +36,7 @@
                         <td>0</td>
                         <td>50</td>
                         <td>2</td>
-                        <td>6</td>
+                        <td>5</td>
                         <td>SW</td>
                         <td>7</td>
                      </tr>
@@ -50,7 +50,7 @@
                         <td>3</td>
                         <td>6</td>
                         <td>SW</td>
-                        <td>6</td>
+                        <td>7</td>
                      </tr>
                      <tr>
                         <td>11:00 AM</td>
@@ -61,7 +61,7 @@
                         <td>36</td>
                         <td>4</td>
                         <td>6</td>
-                        <td>SE</td>
+                        <td>ESE</td>
                         <td>5</td>
                      </tr>
                      <tr>
@@ -82,11 +82,11 @@
                         <td>23</td>
                         <td>23</td>
                         <td>0</td>
-                        <td>27</td>
+                        <td>28</td>
                         <td>7</td>
                         <td>6</td>
                         <td>ESE</td>
-                        <td>9</td>
+                        <td>8</td>
                      </tr>
                   </tbody>
                </table>
@@ -218,7 +218,7 @@
                  "42",
                  "36",
                  "32",
-                 "27"
+                 "28"
                ]
              },
              {
@@ -227,10 +227,10 @@
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
                  "7",
-                 "6",
+                 "7",
                  "5",
                  "5",
-                 "9"
+                 "8"
                ]
              }
            ]
@@ -247,7 +247,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Jul 14 14:05:03 2018</p>
+         Last Run: Sat Jul 14 15:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Conditioning/Sport Psych - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Jul 16, 2018 -  6:30PM til  7:30PM</H4>
                <table class="table table-striped">
@@ -272,7 +272,7 @@
                         <td>29</td>
                         <td>29</td>
                         <td>0</td>
-                        <td>21</td>
+                        <td>22</td>
                         <td>2</td>
                         <td>11</td>
                         <td>SE</td>
@@ -418,7 +418,7 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "21",
+                 "22",
                  "25",
                  "29"
                ]
@@ -447,7 +447,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Jul 14 14:05:03 2018</p>
+         Last Run: Sat Jul 14 15:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - Andrew Sibbald School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 17, 2018 -  7:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -468,7 +468,7 @@
                   <tbody>
                      <tr>
                         <td>07:00 PM</td>
-                        <td>Partly Cloudy</td>
+                        <td>Clear</td>
                         <td>28</td>
                         <td>28</td>
                         <td>0</td>
@@ -476,7 +476,7 @@
                         <td>1</td>
                         <td>13</td>
                         <td>E</td>
-                        <td>30</td>
+                        <td>29</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
@@ -486,7 +486,7 @@
                         <td>0</td>
                         <td>35</td>
                         <td>0</td>
-                        <td>13</td>
+                        <td>11</td>
                         <td>E</td>
                         <td>33</td>
                      </tr>
@@ -500,7 +500,7 @@
                         <td>0</td>
                         <td>11</td>
                         <td>E</td>
-                        <td>36</td>
+                        <td>35</td>
                      </tr>
                   </tbody>
                </table>
@@ -628,9 +628,9 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "30",
+                 "29",
                  "33",
-                 "36"
+                 "35"
                ]
              }
            ]
@@ -647,7 +647,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Jul 14 14:05:03 2018</p>
+         Last Run: Sat Jul 14 15:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - Douglas Glen Blvd SE</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Thursday Jul 19, 2018 -  6:30PM til  8:00PM</H4>
                <table class="table table-striped">
@@ -671,36 +671,36 @@
                         <td>Clear</td>
                         <td>26</td>
                         <td>26</td>
-                        <td>4</td>
-                        <td>31</td>
+                        <td>5</td>
+                        <td>32</td>
                         <td>2</td>
                         <td>13</td>
                         <td>ESE</td>
-                        <td>23</td>
+                        <td>24</td>
                      </tr>
                      <tr>
                         <td>07:00 PM</td>
                         <td>Clear</td>
                         <td>25</td>
                         <td>25</td>
-                        <td>5</td>
+                        <td>6</td>
                         <td>35</td>
                         <td>1</td>
                         <td>14</td>
                         <td>ENE</td>
-                        <td>21</td>
+                        <td>22</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
                         <td>Clear</td>
                         <td>23</td>
                         <td>23</td>
-                        <td>5</td>
-                        <td>42</td>
+                        <td>6</td>
+                        <td>43</td>
                         <td>0</td>
                         <td>14</td>
                         <td>NNE</td>
-                        <td>18</td>
+                        <td>19</td>
                      </tr>
                   </tbody>
                </table>
@@ -808,9 +808,9 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "4",
                  "5",
-                 "5"
+                 "6",
+                 "6"
                ]
              },
              {
@@ -818,9 +818,9 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "31",
+                 "32",
                  "35",
-                 "42"
+                 "43"
                ]
              },
              {
@@ -828,9 +828,9 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "23",
-                 "21",
-                 "18"
+                 "24",
+                 "22",
+                 "19"
                ]
              }
            ]
