--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Jul 14 15:05:03 2018</p>
+         Last Run: Sat Jul 14 16:05:19 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">World Cup Final Game - Coach Tyler's House - Coach Tyler's</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Jul 15, 2018 -  9:00AM til  1:00PM</H4>
                <table class="table table-striped">
@@ -34,23 +34,23 @@
                         <td>16</td>
                         <td>16</td>
                         <td>0</td>
-                        <td>50</td>
+                        <td>49</td>
                         <td>2</td>
-                        <td>5</td>
+                        <td>6</td>
                         <td>SW</td>
-                        <td>7</td>
+                        <td>8</td>
                      </tr>
                      <tr>
                         <td>10:00 AM</td>
                         <td>Clear</td>
-                        <td>18</td>
-                        <td>18</td>
+                        <td>19</td>
+                        <td>19</td>
                         <td>0</td>
-                        <td>42</td>
+                        <td>40</td>
                         <td>3</td>
                         <td>6</td>
-                        <td>SW</td>
-                        <td>7</td>
+                        <td>W</td>
+                        <td>6</td>
                      </tr>
                      <tr>
                         <td>11:00 AM</td>
@@ -58,11 +58,11 @@
                         <td>20</td>
                         <td>20</td>
                         <td>0</td>
-                        <td>36</td>
+                        <td>34</td>
                         <td>4</td>
                         <td>6</td>
-                        <td>ESE</td>
-                        <td>5</td>
+                        <td>ENE</td>
+                        <td>7</td>
                      </tr>
                      <tr>
                         <td>12:00 PM</td>
@@ -70,23 +70,23 @@
                         <td>22</td>
                         <td>22</td>
                         <td>0</td>
-                        <td>32</td>
+                        <td>29</td>
                         <td>6</td>
                         <td>6</td>
                         <td>ESE</td>
-                        <td>5</td>
+                        <td>13</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
                         <td>Clear</td>
-                        <td>23</td>
-                        <td>23</td>
+                        <td>24</td>
+                        <td>24</td>
                         <td>0</td>
-                        <td>28</td>
+                        <td>26</td>
                         <td>7</td>
                         <td>6</td>
                         <td>ESE</td>
-                        <td>8</td>
+                        <td>6</td>
                      </tr>
                   </tbody>
                </table>
@@ -133,10 +133,10 @@
                "fillColor":"rgba(92,0,141,0)",
                "data":[
                  "16",
-                 "18",
+                 "19",
                  "20",
                  "22",
-                 "23"
+                 "24"
                ]
              },
              {
@@ -146,10 +146,10 @@
                "fillColor":"rgba(252,49,18,0)",
                "data":[
                  "16",
-                 "18",
+                 "19",
                  "20",
                  "22",
-                 "23"
+                 "24"
                ]
              }
            ]
@@ -214,11 +214,11 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "50",
-                 "42",
-                 "36",
-                 "32",
-                 "28"
+                 "49",
+                 "40",
+                 "34",
+                 "29",
+                 "26"
                ]
              },
              {
@@ -226,11 +226,11 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
+                 "8",
+                 "6",
                  "7",
-                 "7",
-                 "5",
-                 "5",
-                 "8"
+                 "13",
+                 "6"
                ]
              }
            ]
@@ -247,7 +247,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Jul 14 15:05:03 2018</p>
+         Last Run: Sat Jul 14 16:05:19 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Conditioning/Sport Psych - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Jul 16, 2018 -  6:30PM til  7:30PM</H4>
                <table class="table table-striped">
@@ -284,7 +284,7 @@
                         <td>28</td>
                         <td>28</td>
                         <td>0</td>
-                        <td>25</td>
+                        <td>24</td>
                         <td>1</td>
                         <td>13</td>
                         <td>SE</td>
@@ -419,7 +419,7 @@
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
                  "22",
-                 "25",
+                 "24",
                  "29"
                ]
              },
@@ -447,7 +447,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Jul 14 15:05:03 2018</p>
+         Last Run: Sat Jul 14 16:05:19 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - Andrew Sibbald School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 17, 2018 -  7:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -486,9 +486,9 @@
                         <td>0</td>
                         <td>35</td>
                         <td>0</td>
-                        <td>11</td>
+                        <td>13</td>
                         <td>E</td>
-                        <td>33</td>
+                        <td>32</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
@@ -500,7 +500,7 @@
                         <td>0</td>
                         <td>11</td>
                         <td>E</td>
-                        <td>35</td>
+                        <td>36</td>
                      </tr>
                   </tbody>
                </table>
@@ -629,8 +629,8 @@
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
                  "29",
-                 "33",
-                 "35"
+                 "32",
+                 "36"
                ]
              }
            ]
@@ -647,7 +647,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Jul 14 15:05:03 2018</p>
+         Last Run: Sat Jul 14 16:05:19 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - Douglas Glen Blvd SE</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Thursday Jul 19, 2018 -  6:30PM til  8:00PM</H4>
                <table class="table table-striped">
@@ -676,19 +676,19 @@
                         <td>2</td>
                         <td>13</td>
                         <td>ESE</td>
-                        <td>24</td>
+                        <td>23</td>
                      </tr>
                      <tr>
                         <td>07:00 PM</td>
                         <td>Clear</td>
                         <td>25</td>
                         <td>25</td>
-                        <td>6</td>
+                        <td>5</td>
                         <td>35</td>
                         <td>1</td>
                         <td>14</td>
                         <td>ENE</td>
-                        <td>22</td>
+                        <td>21</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
@@ -696,11 +696,11 @@
                         <td>23</td>
                         <td>23</td>
                         <td>6</td>
-                        <td>43</td>
+                        <td>42</td>
                         <td>0</td>
                         <td>14</td>
                         <td>NNE</td>
-                        <td>19</td>
+                        <td>18</td>
                      </tr>
                   </tbody>
                </table>
@@ -809,7 +809,7 @@
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
                  "5",
-                 "6",
+                 "5",
                  "6"
                ]
              },
@@ -820,7 +820,7 @@
                "data":[
                  "32",
                  "35",
-                 "43"
+                 "42"
                ]
              },
              {
@@ -828,9 +828,9 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "24",
-                 "22",
-                 "19"
+                 "23",
+                 "21",
+                 "18"
                ]
              }
            ]
