--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Jul 14 19:05:03 2018</p>
+         Last Run: Sat Jul 14 20:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">World Cup Final Game - Coach Tyler's House - Coach Tyler's</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Jul 15, 2018 -  9:00AM til  1:00PM</H4>
                <table class="table table-striped">
@@ -34,7 +34,7 @@
                         <td>16</td>
                         <td>16</td>
                         <td>0</td>
-                        <td>48</td>
+                        <td>47</td>
                         <td>2</td>
                         <td>6</td>
                         <td>SW</td>
@@ -49,7 +49,7 @@
                         <td>40</td>
                         <td>3</td>
                         <td>6</td>
-                        <td>W</td>
+                        <td>WSW</td>
                         <td>6</td>
                      </tr>
                      <tr>
@@ -62,7 +62,7 @@
                         <td>4</td>
                         <td>6</td>
                         <td>ENE</td>
-                        <td>8</td>
+                        <td>9</td>
                      </tr>
                      <tr>
                         <td>12:00 PM</td>
@@ -82,11 +82,11 @@
                         <td>23</td>
                         <td>23</td>
                         <td>0</td>
-                        <td>26</td>
+                        <td>25</td>
                         <td>7</td>
                         <td>6</td>
                         <td>ESE</td>
-                        <td>15</td>
+                        <td>17</td>
                      </tr>
                   </tbody>
                </table>
@@ -214,11 +214,11 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "48",
+                 "47",
                  "40",
                  "34",
                  "29",
-                 "26"
+                 "25"
                ]
              },
              {
@@ -228,9 +228,9 @@
                "data":[
                  "8",
                  "6",
-                 "8",
+                 "9",
                  "14",
-                 "15"
+                 "17"
                ]
              }
            ]
@@ -247,7 +247,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Jul 14 19:05:03 2018</p>
+         Last Run: Sat Jul 14 20:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Conditioning/Sport Psych - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Jul 16, 2018 -  6:30PM til  7:30PM</H4>
                <table class="table table-striped">
@@ -272,7 +272,7 @@
                         <td>29</td>
                         <td>29</td>
                         <td>0</td>
-                        <td>22</td>
+                        <td>21</td>
                         <td>2</td>
                         <td>11</td>
                         <td>SE</td>
@@ -284,7 +284,7 @@
                         <td>28</td>
                         <td>28</td>
                         <td>0</td>
-                        <td>25</td>
+                        <td>24</td>
                         <td>1</td>
                         <td>13</td>
                         <td>SE</td>
@@ -298,7 +298,7 @@
                         <td>0</td>
                         <td>29</td>
                         <td>0</td>
-                        <td>11</td>
+                        <td>13</td>
                         <td>ESE</td>
                         <td>0</td>
                      </tr>
@@ -418,8 +418,8 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "22",
-                 "25",
+                 "21",
+                 "24",
                  "29"
                ]
              },
@@ -447,7 +447,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Jul 14 19:05:03 2018</p>
+         Last Run: Sat Jul 14 20:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - Andrew Sibbald School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 17, 2018 -  7:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -469,8 +469,8 @@
                      <tr>
                         <td>07:00 PM</td>
                         <td>Clear</td>
-                        <td>29</td>
-                        <td>29</td>
+                        <td>28</td>
+                        <td>28</td>
                         <td>0</td>
                         <td>30</td>
                         <td>1</td>
@@ -484,7 +484,7 @@
                         <td>27</td>
                         <td>27</td>
                         <td>0</td>
-                        <td>36</td>
+                        <td>35</td>
                         <td>0</td>
                         <td>13</td>
                         <td>E</td>
@@ -496,11 +496,11 @@
                         <td>24</td>
                         <td>24</td>
                         <td>1</td>
-                        <td>44</td>
+                        <td>43</td>
                         <td>0</td>
                         <td>11</td>
                         <td>E</td>
-                        <td>40</td>
+                        <td>39</td>
                      </tr>
                   </tbody>
                </table>
@@ -544,7 +544,7 @@
                "pointColor":"rgba(92,0,141,1)",
                "fillColor":"rgba(92,0,141,0)",
                "data":[
-                 "29",
+                 "28",
                  "27",
                  "24"
                ]
@@ -555,7 +555,7 @@
                "pointColor":"rgba(252,49,18,1)",
                "fillColor":"rgba(252,49,18,0)",
                "data":[
-                 "29",
+                 "28",
                  "27",
                  "24"
                ]
@@ -619,8 +619,8 @@
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
                  "30",
-                 "36",
-                 "44"
+                 "35",
+                 "43"
                ]
              },
              {
@@ -630,7 +630,7 @@
                "data":[
                  "29",
                  "38",
-                 "40"
+                 "39"
                ]
              }
            ]
@@ -647,7 +647,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Jul 14 19:05:03 2018</p>
+         Last Run: Sat Jul 14 20:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - Central Memorial High School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Thursday Jul 19, 2018 -  6:00PM til  7:30PM</H4>
                <table class="table table-striped">
@@ -671,48 +671,48 @@
                         <td>Clear</td>
                         <td>27</td>
                         <td>27</td>
+                        <td>5</td>
+                        <td>34</td>
                         <td>3</td>
-                        <td>32</td>
-                        <td>3</td>
-                        <td>14</td>
+                        <td>16</td>
                         <td>ESE</td>
-                        <td>27</td>
+                        <td>28</td>
                      </tr>
                      <tr>
                         <td>06:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>26</td>
                         <td>26</td>
-                        <td>13</td>
-                        <td>34</td>
+                        <td>14</td>
+                        <td>35</td>
                         <td>2</td>
                         <td>14</td>
                         <td>ESE</td>
-                        <td>30</td>
+                        <td>32</td>
                      </tr>
                      <tr>
                         <td>07:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>25</td>
-                        <td>25</td>
-                        <td>14</td>
-                        <td>37</td>
+                        <td>24</td>
+                        <td>24</td>
+                        <td>15</td>
+                        <td>39</td>
                         <td>1</td>
                         <td>14</td>
                         <td>ENE</td>
-                        <td>30</td>
+                        <td>31</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
-                        <td>Clear</td>
+                        <td>Partly Cloudy</td>
                         <td>23</td>
                         <td>23</td>
-                        <td>14</td>
-                        <td>45</td>
+                        <td>15</td>
+                        <td>47</td>
                         <td>0</td>
-                        <td>14</td>
-                        <td>NNE</td>
-                        <td>28</td>
+                        <td>16</td>
+                        <td>NE</td>
+                        <td>30</td>
                      </tr>
                   </tbody>
                </table>
@@ -759,7 +759,7 @@
                "data":[
                  "27",
                  "26",
-                 "25",
+                 "24",
                  "23"
                ]
              },
@@ -771,7 +771,7 @@
                "data":[
                  "27",
                  "26",
-                 "25",
+                 "24",
                  "23"
                ]
              }
@@ -824,10 +824,10 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "3",
-                 "13",
+                 "5",
                  "14",
-                 "14"
+                 "15",
+                 "15"
                ]
              },
              {
@@ -835,10 +835,10 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "32",
                  "34",
-                 "37",
-                 "45"
+                 "35",
+                 "39",
+                 "47"
                ]
              },
              {
@@ -846,10 +846,10 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "27",
-                 "30",
-                 "30",
-                 "28"
+                 "28",
+                 "32",
+                 "31",
+                 "30"
                ]
              }
            ]
@@ -866,7 +866,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Jul 14 19:05:03 2018</p>
+         Last Run: Sat Jul 14 20:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. MUSC Magic - Rundle College</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jul 21, 2018 - 11:30AM til  2:00PM</H4>
                <table class="table table-striped">
