--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Jul 14 21:05:04 2018</p>
+         Last Run: Sat Jul 14 22:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">World Cup Final Game - Coach Tyler's House - Coach Tyler's</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Jul 15, 2018 -  9:00AM til  1:00PM</H4>
                <table class="table table-striped">
@@ -34,10 +34,10 @@
                         <td>16</td>
                         <td>16</td>
                         <td>0</td>
-                        <td>47</td>
+                        <td>48</td>
                         <td>2</td>
                         <td>6</td>
-                        <td>SW</td>
+                        <td>WSW</td>
                         <td>8</td>
                      </tr>
                      <tr>
@@ -46,11 +46,11 @@
                         <td>18</td>
                         <td>18</td>
                         <td>0</td>
-                        <td>39</td>
+                        <td>40</td>
                         <td>3</td>
                         <td>6</td>
                         <td>W</td>
-                        <td>6</td>
+                        <td>7</td>
                      </tr>
                      <tr>
                         <td>11:00 AM</td>
@@ -74,7 +74,7 @@
                         <td>6</td>
                         <td>6</td>
                         <td>ESE</td>
-                        <td>16</td>
+                        <td>10</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
@@ -86,7 +86,7 @@
                         <td>7</td>
                         <td>6</td>
                         <td>ESE</td>
-                        <td>18</td>
+                        <td>14</td>
                      </tr>
                   </tbody>
                </table>
@@ -214,8 +214,8 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "47",
-                 "39",
+                 "48",
+                 "40",
                  "34",
                  "29",
                  "26"
@@ -227,10 +227,10 @@
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
                  "8",
-                 "6",
+                 "7",
                  "8",
-                 "16",
-                 "18"
+                 "10",
+                 "14"
                ]
              }
            ]
@@ -247,7 +247,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Jul 14 21:05:04 2018</p>
+         Last Run: Sat Jul 14 22:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Conditioning/Sport Psych - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Jul 16, 2018 -  6:30PM til  7:30PM</H4>
                <table class="table table-striped">
@@ -272,9 +272,9 @@
                         <td>29</td>
                         <td>29</td>
                         <td>0</td>
-                        <td>22</td>
+                        <td>21</td>
                         <td>2</td>
-                        <td>11</td>
+                        <td>13</td>
                         <td>SE</td>
                         <td>0</td>
                      </tr>
@@ -418,7 +418,7 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "22",
+                 "21",
                  "24",
                  "29"
                ]
@@ -447,7 +447,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Jul 14 21:05:04 2018</p>
+         Last Run: Sat Jul 14 22:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - Andrew Sibbald School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 17, 2018 -  7:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -476,7 +476,7 @@
                         <td>1</td>
                         <td>13</td>
                         <td>E</td>
-                        <td>29</td>
+                        <td>28</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
@@ -484,9 +484,9 @@
                         <td>27</td>
                         <td>27</td>
                         <td>0</td>
-                        <td>35</td>
+                        <td>36</td>
                         <td>0</td>
-                        <td>13</td>
+                        <td>11</td>
                         <td>E</td>
                         <td>38</td>
                      </tr>
@@ -496,11 +496,11 @@
                         <td>24</td>
                         <td>24</td>
                         <td>1</td>
-                        <td>43</td>
+                        <td>45</td>
                         <td>0</td>
                         <td>11</td>
                         <td>E</td>
-                        <td>40</td>
+                        <td>39</td>
                      </tr>
                   </tbody>
                </table>
@@ -619,8 +619,8 @@
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
                  "30",
-                 "35",
-                 "43"
+                 "36",
+                 "45"
                ]
              },
              {
@@ -628,9 +628,9 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "29",
+                 "28",
                  "38",
-                 "40"
+                 "39"
                ]
              }
            ]
@@ -647,7 +647,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Jul 14 21:05:04 2018</p>
+         Last Run: Sat Jul 14 22:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - Central Memorial High School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Thursday Jul 19, 2018 -  6:00PM til  7:30PM</H4>
                <table class="table table-striped">
@@ -676,38 +676,38 @@
                         <td>3</td>
                         <td>14</td>
                         <td>ESE</td>
-                        <td>29</td>
+                        <td>28</td>
                      </tr>
                      <tr>
                         <td>06:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>26</td>
                         <td>26</td>
-                        <td>15</td>
-                        <td>36</td>
+                        <td>14</td>
+                        <td>35</td>
                         <td>2</td>
-                        <td>13</td>
+                        <td>14</td>
                         <td>ESE</td>
-                        <td>33</td>
+                        <td>32</td>
                      </tr>
                      <tr>
                         <td>07:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>24</td>
                         <td>24</td>
-                        <td>16</td>
+                        <td>15</td>
                         <td>39</td>
                         <td>1</td>
                         <td>14</td>
                         <td>ENE</td>
-                        <td>32</td>
+                        <td>31</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>22</td>
                         <td>22</td>
-                        <td>17</td>
+                        <td>16</td>
                         <td>47</td>
                         <td>0</td>
                         <td>14</td>
@@ -825,9 +825,9 @@
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
                  "6",
+                 "14",
                  "15",
-                 "16",
-                 "17"
+                 "16"
                ]
              },
              {
@@ -836,7 +836,7 @@
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
                  "34",
-                 "36",
+                 "35",
                  "39",
                  "47"
                ]
@@ -846,9 +846,9 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "29",
-                 "33",
+                 "28",
                  "32",
+                 "31",
                  "30"
                ]
              }
@@ -866,7 +866,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Jul 14 21:05:04 2018</p>
+         Last Run: Sat Jul 14 22:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. MUSC Magic - Rundle College</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jul 21, 2018 - 11:30AM til  2:00PM</H4>
                <table class="table table-striped">
